cni/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
spec:
  containers:
  - name: pod-demo-c1
    image: ikubernetes/myapp:v1
