cni/demo-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo2
spec:
  containers:
  - name: pod-demo2-c1
    image: ikubernetes/myapp:v1
