cni/egress.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  namespace: default
spec:
