cni/ingress-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector:
    matchLabels:
      app: myapp
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
        except: 
        - 10.244.1.0/24
    ports:
    - port: 80
      protocol: TCP
  policyTypes:
  - Ingress
